syntax = "proto3";

package user;

option go_package = "./proto;user";

import "proto/user/user.proto";

service User {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
	rpc ReadSession(ReadSessionRequest) returns(ReadSessionResponse) {}
	rpc VerifyEmail(VerifyEmailRequest) returns(VerifyEmailResponse) {}
	rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse) {}
	rpc SendPasswordResetEmail(SendPasswordResetEmailRequest) returns (SendPasswordResetEmailResponse) {}
	rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
	rpc List(ListRequest) returns(ListResponse) {}
}
