syntax = "proto3";

package user;

option go_package = "./proto;user";

message CreateRequest {
	string username = 2;
	string email = 3;
	string password = 4;
	map<string,string> profile = 5;
}

message CreateResponse {
	uint32 id = 1;
}

message DeleteRequest {
	uint32 id = 1;
}

message DeleteResponse {
	uint32 id = 1;
}

message ReadRequest {
	uint32 id = 1;
	string username = 2;
	string email = 3;
}

message ReadResponse {
	uint32 id = 1;
	string username = 2;
	string email = 3;
	string password = 4;
	map<string,string> profile = 5;
}

message UpdateRequest {
	uint32 id = 1;
	string username = 2;
	string email = 3;
	map<string,string> profile = 4;
}

message UpdateResponse {
	uint32 id = 1;
}

message UpdatePasswordRequest {
	uint32 id = 1;
	string oldPassword = 2;
	string newPassword = 3;
	string confirm_password = 4;
}

message UpdatePasswordResponse {
	uint32 id = 1;
}

message VerifyEmailRequest {
	string token = 1;
}

message VerifyEmailResponse {
}

message SendVerificationEmailRequest {
	string email = 1;
	string subject = 2;
	string textContent = 3;
	string redirectUrl = 4;
	string failureRedirectUrl = 5;
	string fromName = 6;
}

message SendVerificationEmailResponse {}

message SendPasswordResetEmailRequest {
	string email = 1;
	string subject = 2;
	string textContent = 3;
	string fromName = 4;
	int64 expiration = 5;
}

message SendPasswordResetEmailResponse {
}

message ResetPasswordRequest {
	string email = 1;
	string code = 2;
	string newPassword = 3;
	string confirmPassword = 4;
}

message ResetPasswordResponse {}

message ListRequest {
	int32 offset = 1;
	int32 limit = 2;
	int32 order_type = 3;
	string order_col = 4;
	string username = 5;
	string email = 6;
}

message ListResponseItem {
	uint32 id = 1;
	string username = 2;
	string email = 3;
	int64 created = 4;
	int64 updated = 5;
	bool verified = 6;
	int64 verificationDate = 7;
	map<string,string> profile = 8;
}

message ListResponse {
	repeated ListResponseItem users = 1;
}

message ValidPasswordRequest {
	uint32 id = 1;
	string password = 2;
}

message ValidPasswordResponse {}
